src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_draw_matches")]
        internal static extern int Features2DDrawMatches(IntPtr img1, NativeKeyPoint* keypoints1, int keypoint1Count, IntPtr img2, NativeKeyPoint* keypoints2, int keypoint2Count, NativeDMatch* matches, int matchCount, IntPtr outImage, double matchColorV0, double matchColorV1, double matchColorV2, double matchColorV3, double singlePointColorV0, double singlePointColorV1, double singlePointColorV2, double singlePointColorV3, int flags);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_draw_matches_knn")]
        internal static extern int Features2DDrawMatchesKnn(IntPtr img1, NativeKeyPoint* keypoints1, int keypoint1Count, IntPtr img2, NativeKeyPoint* keypoints2, int keypoint2Count, int* offsets, int offsetCount, NativeDMatch* matches, int matchCount, IntPtr outImage, double matchColorV0, double matchColorV1, double matchColorV2, double matchColorV3, double singlePointColorV0, double singlePointColorV1, double singlePointColorV2, double singlePointColorV3, int flags);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_create")]
        internal static extern int Features2DSiftCreate(int nFeatures, int nOctaveLayers, double contrastThreshold, double edgeThreshold, double sigma, int descriptorType, int enablePreciseUpscale, out IntPtr sift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_release")]
        internal static extern void Features2DSiftRelease(IntPtr sift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_clear")]
        internal static extern int Features2DSiftClear(IntPtr sift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_empty")]
        internal static extern int Features2DSiftEmpty(IntPtr sift, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_descriptor_size")]
        internal static extern int Features2DSiftDescriptorSize(IntPtr sift, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_descriptor_type")]
        internal static extern int Features2DSiftDescriptorType(IntPtr sift, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_default_norm")]
        internal static extern int Features2DSiftDefaultNorm(IntPtr sift, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_nfeatures")]
        internal static extern int Features2DSiftGetNFeatures(IntPtr sift, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_nfeatures")]
        internal static extern int Features2DSiftSetNFeatures(IntPtr sift, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_n_octave_layers")]
        internal static extern int Features2DSiftGetNOctaveLayers(IntPtr sift, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_n_octave_layers")]
        internal static extern int Features2DSiftSetNOctaveLayers(IntPtr sift, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_contrast_threshold")]
        internal static extern int Features2DSiftGetContrastThreshold(IntPtr sift, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_contrast_threshold")]
        internal static extern int Features2DSiftSetContrastThreshold(IntPtr sift, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_edge_threshold")]
        internal static extern int Features2DSiftGetEdgeThreshold(IntPtr sift, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_edge_threshold")]
        internal static extern int Features2DSiftSetEdgeThreshold(IntPtr sift, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_sigma")]
        internal static extern int Features2DSiftGetSigma(IntPtr sift, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_sigma")]
        internal static extern int Features2DSiftSetSigma(IntPtr sift, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_count")]
        internal static extern int Features2DSiftDetectCount(IntPtr sift, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_fill")]
        internal static extern int Features2DSiftDetectFill(IntPtr sift, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_compute")]
        internal static extern int Features2DSiftCompute(IntPtr sift, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_and_compute_count")]
        internal static extern int Features2DSiftDetectAndComputeCount(IntPtr sift, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_and_compute_fill")]
        internal static extern int Features2DSiftDetectAndComputeFill(IntPtr sift, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_create")]
        internal static extern int Features2DFastCreate(int threshold, int nonmaxSuppression, int type, out IntPtr fast);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_release")]
        internal static extern void Features2DFastRelease(IntPtr fast);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_clear")]
        internal static extern int Features2DFastClear(IntPtr fast);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_empty")]
        internal static extern int Features2DFastEmpty(IntPtr fast, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_descriptor_size")]
        internal static extern int Features2DFastDescriptorSize(IntPtr fast, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_descriptor_type")]
        internal static extern int Features2DFastDescriptorType(IntPtr fast, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_default_norm")]
        internal static extern int Features2DFastDefaultNorm(IntPtr fast, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_get_threshold")]
        internal static extern int Features2DFastGetThreshold(IntPtr fast, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_set_threshold")]
        internal static extern int Features2DFastSetThreshold(IntPtr fast, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_get_nonmax_suppression")]
        internal static extern int Features2DFastGetNonmaxSuppression(IntPtr fast, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_set_nonmax_suppression")]
        internal static extern int Features2DFastSetNonmaxSuppression(IntPtr fast, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_get_type")]
        internal static extern int Features2DFastGetType(IntPtr fast, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_set_type")]
        internal static extern int Features2DFastSetType(IntPtr fast, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_detect_count")]
        internal static extern int Features2DFastDetectCount(IntPtr fast, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_detect_fill")]
        internal static extern int Features2DFastDetectFill(IntPtr fast, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_create")]
        internal static extern int Features2DGfttCreate(int maxCorners, double qualityLevel, double minDistance, int blockSize, int gradientSize, int useHarrisDetector, double k, out IntPtr gftt);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_release")]
        internal static extern void Features2DGfttRelease(IntPtr gftt);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_clear")]
        internal static extern int Features2DGfttClear(IntPtr gftt);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_empty")]
        internal static extern int Features2DGfttEmpty(IntPtr gftt, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_descriptor_size")]
        internal static extern int Features2DGfttDescriptorSize(IntPtr gftt, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_descriptor_type")]
        internal static extern int Features2DGfttDescriptorType(IntPtr gftt, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_default_norm")]
        internal static extern int Features2DGfttDefaultNorm(IntPtr gftt, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_max_features")]
        internal static extern int Features2DGfttGetMaxFeatures(IntPtr gftt, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_set_max_features")]
        internal static extern int Features2DGfttSetMaxFeatures(IntPtr gftt, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_quality_level")]
        internal static extern int Features2DGfttGetQualityLevel(IntPtr gftt, out double value);
